Rename first language alias

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "contributes": {
         "languages": [{
             "id": "lua",
-            "aliases": ["Roblox Lua/Luau", "Luau"],
+            "aliases": ["Roblox Lua", "Luau"],
             "extensions": [".lua",".luau",".rbxs"],
             "configuration": "./language-configuration.json"
         }],
