--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Provides highlighting (and nothing else!) for Roblox Lua/Luau",
     "keywords": ["Luau", "Roblox", "Grammar"],
     
-    "version": "0.0.1",
+    "version": "1.0.0",
 
     "repository": {
         "type": "git",
@@ -14,6 +14,7 @@
         "url": "https://github.com/dekkonot/vscode-lua/issues"
     },
     "license": "MIT",
+    "publisher": "dekkonot",
 
     "engines": {
         "vscode": "^1.48.0"
